--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,14 +1,10 @@
-.page {
-    padding: 32px 0 0 32px;
-	background: #f3f3f3;
-    display: flex;
-    flex-wrap: wrap;
-    min-height: 100vh;
-    box-sizing: border-box;
+.buttonContainer {
+    z-index: 1000;
+    position: absolute;
+    top: 0;
+    left: 32px;
 }
 
-.container {
-    flex: 30%;
-    min-width: 350px;
-    height: calc((100vh - 128px) / 3);
+.selected button {
+    color:green;
 }
