--- a/src/pages/page.module.css
+++ b/src/pages/page.module.css
@@ -7,8 +7,29 @@
     box-sizing: border-box;
 }
 
+.pageFlex {
+    padding: 32px 0 0 32px;
+	background: #f3f3f3;
+    display:flexbox;
+    flex-wrap: wrap;
+    min-height: 100vh;
+    box-sizing: border-box;
+}
+
 .container {
-    flex: 30%;
+    flex: 31%;
     min-width: 350px;
     height: calc((100vh - 128px) / 3);
+}
+
+.containerLarge {
+    flex: 64%;
+    min-width: 650px;
+    height: calc((((100vh - 128px) / 3) * 2) + 32px);
+}
+
+.containerMedium {
+    flex: 31%;
+    min-width: 350px;
+    height: calc((((100vh - 128px) / 3) * 2) + 32px);
 }
